--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "css-loader": "^3.4.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
